--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^5.2.0",
+    "axios": "^1.7.7",
     "vue": "^3.4.37",
     "vue-i18n": "^9.14.1",
     "vue-lazyload": "^3.0.0",
