--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Just to be thorough, also ignore any other common env file patterns
+.env.development
+.env.test
+.env.production
